main_app/static/css/recipe-detail.css
.recipe-detail {
  max-width: 850px;
  margin: 1rem auto;
  padding: 2rem;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
  margin-top: 0.5rem;
}

.recipe-photo-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  max-width: 100%;
  margin-bottom: 0.5rem;
  /* flex: 1; */
}

.recipe-photo {
  width: 100%;
  max-width: 400px;
  height: auto;
  aspect-ratio: 1/1;
  object-fit: cover;
  border-radius: 6px;
}

.photo-credit {
  font-size: 0.8rem;
  color: #777;
  text-align: right;
  margin-top: 0.25rem;
  margin-bottom: 1rem;
  width: 100%;
}

.photo-collection-container {
  display: flex;
  flex-direction: row;
  gap: 2rem;
}

.recipe-collections {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.recipe-collection-info {
  display: flex;
  flex-direction: column;
  /* padding: 1rem; */
  justify-content: flex-start;
  align-items: center;
  flex: 1;
}

.title {
  text-align: center;
}

.collection-list li {
  background-color: var(--color-coral-orange);
  color: white;
  padding: 0.5rem 1rem;
  border-radius: 20px;
  font-size: 0.9rem;
}

.collection-form-container {
  margin-top: 2rem;
}

.collection-form-container form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.tag-list,
.collection-list {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  gap: 0.75rem;
  padding: 0;
  justify-content: center;
  margin-bottom: 1rem;
}

.button-container {
  justify-content: flex-start;
}

.instruction-list,
.ingredient-list,
.button-container,
h2,
h3,
p {
  margin-bottom: 1rem;
}

.tag {
  background-color: var(--color-coral-orange);
  color: white;
  padding: 0.5rem 1rem;
  border-radius: 20px;
  font-size: 0.9rem;
  /* margin: 0.75rem 0; */
}

.feedback-list {
  list-style: none;
  padding: 0;
  margin-top: 2rem;
}

.feedback-list li {
  margin-bottom: 1.5rem;
  border-bottom: 1px solid #eee;
  padding-bottom: 1rem;
}

.comment textarea {
  width: 100%;
  padding: 1rem;
}

.star-rating {
  display: flex;
  direction: rtl;
  justify-content: flex-end;
}

.star-rating input[type="radio"] {
  display: none;
}

.star-rating label {
  font-size: 2rem;
  color: #ccc;
  cursor: pointer;
  transition: color 0.2s ease;
}

/* Hover effects - highlight all stars before the hovered one */
.star-rating label:hover,
.star-rating label:hover ~ label {
  color: #f6ad55;
}

/* Checked effect - highlight all stars up to the selected one */
.star-rating input[type="radio"]:checked ~ label {
  color: #f6ad55;
}

.add-to-collection-form {
  margin-top: 1.5rem;
}

/* .add-to-collection-form {
  display: flex;
  justify-content: center;
} */

.add-to-collection-form select,
.add-to-collection-form button {
  padding: 0.5rem;
  margin-right: 0.5rem;
  border-radius: 5px;
  border: 1px solid #ccc;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.modal-content {
  background-color: white;
  padding: 1rem;
  border-radius: 8px;
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
  width: 90%;
  max-width: 400px;
}

.modal-buttons {
  margin-top: 1rem;
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.modal-content form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.feedback {
  margin-bottom: 1rem;
  border: none;
}

.btn {
  border: none;
}

.modal-overlay.hidden {
  display: none;
}

@media (max-width: 768px) {
  .photo-collection-container {
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }

  .collection-form-container {
    margin-top: 0.5rem;
    margin-bottom: 1rem;
  }
  .collection-form-container form {
    margin-top: 0;
  }
  .recipe-photo-wrapper {
    align-items: center;
    max-width: 350px;
  }

  .recipe-photo {
    max-width: 350px;
    height: auto;
  }

  .recipe-detail {
    margin: 1rem;
  }

  h2 {
    font-size: 1.5rem;
  }

  .comment textarea {
    width: 100%;
  }
}

@media (max-width: 450px) {
  .recipe-photo-wrapper {
    width: 300px;
  }
  .recipe-photo {
    height: 300px;
  }

  .comment textarea {
    width: 80%;
  }
}

